Implement VerifyPayment Get Action Sample

--- a/samples/Zarinpal.AspNetCore.Sample/Views/Home/VerifyPayment.cshtml
+++ b/samples/Zarinpal.AspNetCore.Sample/Views/Home/VerifyPayment.cshtml
@@ -9,6 +9,9 @@
         <div class="alert alert-success">
             عملیات با موفقیت انجام شد
         </div>
+        <div class="alert alert-success">
+            کد پیگیری : @ViewBag.RefId
+        </div>
     }
     else
     {
